# hsd-python

./: .appveyor.yml  .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.rst  LICENSE  README.rst  setup.cfg
.github/workflows/: ci.yml
devtools/: set_version
docs/: api.rst  conf.py  hsd.rst  index.rst  introduction.rst
src/: .gitattributes  MANIFEST.in  hsd.py  setup.cfg  setup.py
src/hsd/: __init__.py  _version.py  common.py  dict.py  dictbuilder.py  dump.py  eventhandler.py  formatter.py  interrupts.py  io.py  parser.py  wrappers.py
test/: test.hsd  test_dict.py  test_dictbuilder.py  test_dump.py  test_parser.py  test_wrappers.py
