[metadata]
name = hsd-python
version = 0.1
author = DFTB+ developers group
author_email = info@dftbplus.org
url = https://github.com/dftbplus/hsd-python
description =
    Tools for reading, writing and manipulating data stored in the human-friendly
    structured data (HSD) format
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    = src
packages = hsd

[options.packages.find]
where = src
